--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "very nice...",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node initdb.js && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +19,19 @@
   "homepage": "https://github.com/alx1981/NodJsTestProject#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "config": "^3.3.9",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "joi": "^17.9.2"
+    "express-session": "^1.17.3",
+    "joi": "^17.9.2",
+    "mongoose": "^7.3.4",
+    "mysql2": "^3.5.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
+    "soket.io": "^0.0.1-security"
   }
 }
